feat(auth): implemented reg and login
